force-app/main/default/objects/AccountBuildingProjectRelation__c/AccountBuildingProjectRelation__c.object-meta.xml
<CustomObject>
    <label>Account Building Project Relation</label>
    <nameField>
        <displayFormat>ABP-{00}</displayFormat>
        <label>Account Building Project Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Building Project Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>