force-app/main/default/objects/AccountBuildingProjectRelation__c/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Project Participants</relationshipLabel>
    <relationshipName>AccountBuildingProject</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>